--- a/www/apps/docs/content/recipes/commerce-automation.mdx
+++ b/www/apps/docs/content/recipes/commerce-automation.mdx
@@ -106,74 +106,63 @@ Medusa also provides official notification plugins that integrate with third-par
   Here’s an example of a subscriber that uses the SendGrid plugin to send an email to the customer when the order has a new note:
 
   ```ts title=src/subscribers/new-note.ts
-  import {
-    EventBusService,
+  import { 
+    type SubscriberConfig, 
+    type SubscriberArgs,
+    ProductVariantService,
     NoteService,
     OrderService,
   } from "@medusajs/medusa"
 
-  type InjectedDependencies = {
-    eventBusService: EventBusService
-    sendgridService: any
-    noteService: NoteService
-    orderService: OrderService
-  }
+  export default async function handleNoteCreated({ 
+    data, eventName, container, pluginOptions, 
+  }: SubscriberArgs<Record<string, string>>) {
+    const noteService: NoteService = container.resolve(
+      "noteService"
+    )
+    const orderService: OrderService = container.resolve(
+      "orderService"
+    )
+    const sendgridService = container.resolve("sendgridService")
 
-  class NewNoteSubscriber {
-    protected sendGridService_: any
-    protected noteService_: NoteService
-    protected orderService_: OrderService
+    // retrieve note by id
+    const note = await noteService.retrieve(data.id, {
+      relations: ["author"],
+    })
 
-    constructor({
-      eventBusService,
-      sendgridService,
-      noteService,
-      orderService,
-    }: InjectedDependencies) {
-      this.noteService_ = noteService
-      this.orderService_ = orderService
-      this.sendGridService_ = sendgridService
-      eventBusService.subscribe(
-        "note.created", 
-        this.handleNoteCreated
-      )
+    if (!note || note.resource_type !== "order") {
+      return
     }
 
-    handleNoteCreated = async (data) => {
-      // retrieve note by id
-      const note = await this.noteService_.retrieve(data.id, {
-        relations: ["author"],
-      })
+    // retrieve note's order
+    const order = await orderService.retrieve(
+      note.resource_id
+    )
 
-      if (!note || note.resource_type !== "order") {
-        return
-      }
-
-      // retrieve note's order
-      const order = await this.orderService_.retrieve(
-        note.resource_id
-      )
-
-      if (!order) {
-        return
-      }
-
-      this.sendGridService_.sendEmail({
-        templateId: "order-update",
-        from: "hello@medusajs.com",
-        to: order.email,
-        dynamic_template_data: {
-          // any data necessary for your template...
-          note_text: note.value,
-          note_author: note.author.first_name,
-          note_date: note.created_at,
-          order_id: order.display_id,
-        },
-      })
+    if (!order) {
+      return
     }
+
+    sendGridService.sendEmail({
+      templateId: "order-update",
+      from: "hello@medusajs.com",
+      to: order.email,
+      dynamic_template_data: {
+        // any data necessary for your template...
+        note_text: note.value,
+        note_author: note.author.first_name,
+        note_date: note.created_at,
+        order_id: order.display_id,
+      },
+    })
   }
 
-  export default NewNoteSubscriber
+  export const config: SubscriberConfig = {
+    event: NoteService.Events.CREATED,
+    context: {
+      subscriberId: "note-created-handler",
+    },
+  }
   ```
 
 </Details> 
@@ -206,14 +195,14 @@ You can implement automatic synchronization in Medusa using scheduled jobs. A sc
     Logger,
     ProductService,
     StoreService,
+    MedusaContainer,
   } from "@medusajs/medusa"
   import { 
     ProductSelector,
   } from "@medusajs/medusa/dist/types/product"
-  import { AwilixContainer } from "awilix"
 
   export default async (
-    container: AwilixContainer,
+    container: MedusaContainer,
     config: Record<string, unknown>
   ): Promise<void> => {
     const logger = container.resolve<Logger>("logger")
@@ -422,76 +411,65 @@ For example, if you're grouping customers with over twenty orders, you can use a
 
   ```ts title=src/subscribers/add-custom-to-vip.ts
   import { 
-    CustomerGroupService, 
-    CustomerService,
-    EventBusService,
+    type SubscriberConfig, 
+    type SubscriberArgs,
     OrderService,
+    CustomerService,
+    CustomerGroupService,
   } from "@medusajs/medusa"
 
-  type InjectedDependencies = {
-    orderService: OrderService
-    customerService: CustomerService
-    customerGroupService: CustomerGroupService
-    eventBusService: EventBusService
-  }
+  export default async function handleOrderPlaced({ 
+    data, eventName, container, pluginOptions, 
+  }: SubscriberArgs<Record<string, string>>) {
+    const orderService: OrderService = container.resolve(
+      "orderService"
+    )
+    const customerService: CustomerService = container.resolve(
+      "customerService"
+    )
+    const customerGroupService: CustomerGroupService = 
+      container.resolve("customerGroupService")
 
-  class AddCustomerToVipSubscriber {
-    protected orderService_: OrderService
-    protected customerService_: CustomerService
-    protected customerGroupService_: CustomerGroupService
+    // check if VIP group exists
+    const vipGroup = await customerGroupService.list({
+      name: "VIP",
+    }, {
+      relations: ["customers"],
+    })
+    if (!vipGroup.length) {
+      return
+    }
 
-    constructor({
-      orderService,
-      customerService,
-      customerGroupService,
-      eventBusService,
-    }: InjectedDependencies) {
-      this.orderService_ = orderService
-      this.customerService_ = customerService
-      this.customerGroupService_ = customerGroupService
-      eventBusService.subscribe(
-        "order.placed",
-        this.handleOrderPlaced
+    // retrieve order and its customer
+    const order = await orderService.retrieve(data.id)
+
+    if (!order || !order.customer_id || 
+      vipGroup[0].customers.find(
+        (customer) => customer.id === order.customer_id
+      ) !== undefined) {
+      return
+    }
+
+    // retrieve orders of this customer
+    const [, count] = await orderService.listAndCount({
+      customer_id: order.customer_id,
+    })
+
+    if (count >= 20) {
+      // add customer to VIP group
+      customerGroupService.addCustomers(
+        vipGroup[0].id,
+        order.customer_id
       )
     }
-
-    handleOrderPlaced = async ({ id }) => {
-      // check if VIP group exists
-      const vipGroup = await this.customerGroupService_.list({
-        name: "VIP",
-      }, {
-        relations: ["customers"],
-      })
-      if (!vipGroup.length) {
-        return
-      }
-
-      // retrieve order and its customer
-      const order = await this.orderService_.retrieve(id)
-
-      if (!order || !order.customer_id || 
-        vipGroup[0].customers.find(
-          (customer) => customer.id === order.customer_id
-        ) !== undefined) {
-        return
-      }
-
-      // retrieve orders of this customer
-      const [, count] = await this.orderService_.listAndCount({
-        customer_id: order.customer_id,
-      })
-
-      if (count >= 20) {
-        // add customer to VIP group
-        this.customerGroupService_.addCustomers(
-          vipGroup[0].id,
-          order.customer_id
-        )
-      }
-    }
   }
 
-  export default AddCustomerToVipSubscriber
+  export const config: SubscriberConfig = {
+    event: OrderService.Events.PLACED,
+    context: {
+      subscriberId: "order-placed-handler",
+    },
+  }
   ```
 
 </Details>
@@ -544,93 +522,78 @@ You can alternatively have a Scheduled Job that checks if the number of new prod
 
   ```ts title=src/subscribers/send-products-newsletter.ts
   import { 
-    CustomerService, 
-    EventBusService, 
-    NoteService, 
-    OrderService, 
-    ProductService, 
+    type SubscriberConfig, 
+    type SubscriberArgs,
+    ProductService,
     StoreService,
+    CustomerService,
   } from "@medusajs/medusa"
   import { 
     ProductSelector,
   } from "@medusajs/medusa/dist/types/product"
 
-  type InjectedDependencies = {
-    eventBusService: EventBusService
-    sendgridService: any
-    productService: ProductService
-    storeService: StoreService
-    customerService: CustomerService
-  }
+  export default async function handleOrderPlaced({ 
+    data, eventName, container, pluginOptions, 
+  }: SubscriberArgs<Record<string, string>>) {
+    const productService: ProductService = container.resolve(
+      "productService"
+    )
+    const storeService: StoreService = container.resolve(
+      "storeService"
+    )
+    const customerService: CustomerService = container.resolve(
+      "customerService"
+    )
+    const sendgridService = container.resolve("sendgridService")
 
-  class SendProductsNewsletterSubscriber {
-    protected sendGridService_: any
-    protected productService_: ProductService
-    protected storeService_: StoreService
-    protected customerService_: CustomerService
-
-    constructor({
-      eventBusService,
-      sendgridService,
-      productService,
-      storeService,
-      customerService,
-    }: InjectedDependencies) {
-      this.productService_ = productService
-      this.sendGridService_ = sendgridService
-      this.storeService_ = storeService
-      this.customerService_ = customerService
-      eventBusService.subscribe(
-        "product.created", 
-        this.handleProductCreated
-      )
+    // retrieve store to have access to last send date
+    const store = await storeService.retrieve()
+        
+    const productFilters: ProductSelector = {}
+    if (store.metadata.last_send_date) {
+      productFilters.created_at = {
+        gt: new Date(store.metadata.last_send_date as string),
+      }
     }
 
-    handleProductCreated = async ({ id }) => {
-      // retrieve store to have access to last send date
-      const store = await this.storeService_.retrieve()
-      
-      const productFilters: ProductSelector = {}
-      if (store.metadata.last_send_date) {
-        productFilters.created_at = {
-          gt: new Date(store.metadata.last_send_date as string),
-        }
-      }
+    const products = await productService.list(
+      productFilters
+    )
 
-      const products = await this.productService_.list(
-        productFilters
-      )
+    if (products.length > 10) {
+      // get subscribed customers
+      const customers = await customerService.list({
+        metadata: {
+          is_subscribed: true,
+        },
+      })
+      sendgridService.sendEmail({
+        templateId: "product-newsletter",
+        from: "hello@medusajs.com",
+        to: customers.map((customer) => ({
+          name: customer.first_name,
+          email: customer.email,
+        })),
+        dynamic_template_data: {
+          // any data necessary for your template...
+          products,
+        },
+      })
 
-      if (products.length > 10) {
-        // get subscribed customers
-        const customers = await this.customerService_.list({
-          metadata: {
-            is_subscribed: true,
-          },
-        })
-        this.sendGridService_.sendEmail({
-          templateId: "product-newsletter",
-          from: "hello@medusajs.com",
-          to: customers.map((customer) => ({
-            name: customer.first_name,
-            email: customer.email,
-          })),
-          dynamic_template_data: {
-            // any data necessary for your template...
-            products,
-          },
-        })
-
-        await this.storeService_.update({
-          metadata: {
-            last_send_date: new Date(),
-          },
-        })
-      }
+      await storeService.update({
+        metadata: {
+          last_send_date: new Date(),
+        },
+      })
     }
   }
 
-  export default SendProductsNewsletterSubscriber
+  export const config: SubscriberConfig = {
+    event: ProductService.Events.CREATED,
+    context: {
+      subscriberId: "product-create-handler",
+    },
+  }
   ```
 
 </Details>
