main transitions and solve responsive issus

--- a/packages/admin-ui/ui/public/locales/en-US/translation.json
+++ b/packages/admin-ui/ui/public/locales/en-US/translation.json
@@ -205,7 +205,7 @@
   "Import {fileTitle}": "Import {{fileTitle}}",
   "Import List": "Import List",
   "Add Products": "Add Products",
-  "Search by name or description...": "Search by name or description...",
+  "Search by name or description...": "Search by name or description... test 12",
   "Status": "Status",
   "Variants": "Variants",
   "General": "General",
@@ -277,7 +277,7 @@
   "Free Shipping": "Free Shipping",
   "Code": "Code",
   "Description": "Description",
-  "Name in Engilish" : "Name in Engilish",
+  "Name in Engilish": "Name in Engilish",
   "Description in English": "Description in English",
   "Handle in Engilish": "Handle in Engilish",
   "Amount": "Amount",
@@ -1225,5 +1225,117 @@
   "Select product types": "Select product types",
   "Select shipping options": "Select shipping options",
   "memberWithCount_one": "one member",
-  "memberWithCount_other": "{{count}} members"
+  "memberWithCount_other": "{{count}} members",
+  "Discount has a start date": "Discount has a start date",
+  "Limit the number of redemtions?": "Limit the number of redemtions?",
+  "Key": "Key",
+  "An amount for your store's default currency is required": "An amount for your store's default currency is required",
+  "If enabled the value used for the store&apos;s default currency code will also be applied to all other currencies in your store.": "If enabled the value used for the store&apos;s default currency code will also be applied to all other currencies in your store.",
+  "The denomination in your store's other currencies": "The denomination in your store's other currencies",
+  "Default currency": "Default currency",
+  "The denomination in your store's default currency": "The denomination in your store's default currency",
+  "Use value for all currencies?": "Use value for all currencies?",
+  "Other currencies": "Other currencies",
+  "Balance must be greater than 0": "Balance must be greater than 0",
+  "The updated balance cannot exceed the original value of": "The updated balance cannot exceed the original value of",
+  "Gift Card has an expiry date?": "Gift Card has an expiry date?",
+  "Schedule the Gift Card to deactivate in the future.": "Schedule the Gift Card to deactivate in the future.",
+  "Personal Message": "Personal Message",
+  "Write a personal message here": "Write a personal message here",
+  "Choose a country": "Choose a country",
+  "Width": "Width",
+  "Length": "Length",
+  "Height": "Height",
+  "Weight": "Weight",
+  "When unchecked discounts will not be applied to this product": "When unchecked discounts will not be applied to this product",
+  "When unchecked discounts will not be applied to this gift card": "When unchecked discounts will not be applied to this gift card",
+  "Winter Jacket": "Winter Jacket",
+  "Title must be at least 1 character": "Title must be at least 1 character",
+  "Warm and cozy": "Warm and cozy",
+  "Give your gift card a short and clear title": "Give your gift card a short and clear title",
+  "Give your product card a short and clear title": "Give your product card a short and clear title",
+  "50-60 characters is the recommended length for search engines": "50-60 characters is the recommended length for search engines",
+  "Title ar is required": "Title ar is required",
+  "Material": "Material",
+  "Handle Arabic": "Handle Arabic",
+  "Description in arabic": "Description in arabic",
+  "Give your gift card a short and clear description": "Give your gift card a short and clear description",
+  "120-160 characters is the recommended length for search engines": "120-160 characters is the recommended length for search engines",
+  "Uploads": "Uploads",
+  "No categories available": "No categories available",
+  "Current Sales Channels": "Current Sales Channels",
+  "Add Channels": "Add Channels",
+  "This is SEO description": "This is SEO description",
+  "URL": "URL",
+  "This is SEO URL": "This is SEO URL",
+  "Options": "Options",
+  "Options are used to define the color, size, etc. of the variant.": "Options are used to define the color, size, etc. of the variant.",
+  "Shipping information can be required depending on your shipping provider, and whether or not you are shipping internationally.": "Shipping information can be required depending on your shipping provider, and whether or not you are shipping internationally.",
+  "Configure to calculate the most accurate shipping rates.": "Configure to calculate the most accurate shipping rates.",
+  "Configure if you are shipping internationally.": "Configure if you are shipping internationally.",
+  "Metadata can be used to store additional information about the variant.": "Metadata can be used to store additional information about the variant.",
+  "Configure the general information for this variant.": "Configure the general information for this variant.",
+  "Configure the pricing for this variant.": "Configure the pricing for this variant.",
+  "Configure the inventory and stock for this variant.": "Configure the inventory and stock for this variant.",
+  "Stock keeping unit (SKU)": "Stock keeping unit (SKU)",
+  "SUN-G, JK1234...": "SUN-G, JK1234...",
+  "Quantity in stock": "Quantity in stock",
+  "EAN (Barcode)": "EAN (Barcode)",
+  "UPC (Barcode)": "UPC (Barcode)",
+  "Barcode": "Barcode",
+  "When checked Medusa will regulate the inventory when orders and returns are made.": "When checked Medusa will regulate the inventory when orders and returns are made.",
+  "Allow backorders": "Allow backorders",
+  "When checked the product will be available for purchase despite the product being sold out": "When checked the product will be available for purchase despite the product being sold out",
+  "Total inventory at all locations": "Total inventory at all locations",
+  "Manage locations": "Manage locations",
+  "Add SEO information to your product.": "Add SEO information to your product.",
+  "Minutes": "Minutes",
+  "Years": "Years",
+  "Months": "Months",
+  "Days": "Days",
+  "Hours": "Hours",
+  "Show more": "Show more",
+  "Available in": "Available in",
+  "out of": "out of",
+  "Not on website": "Not on website",
+  "Currently editing these fields:": "Currently editing these fields:",
+  "Fulfill Replacement": "Fulfill Replacement",
+  "Resend notification": "Resend notification",
+  "Send": "Send",
+  "Return": "Return",
+  "Requested on": "Requested on",
+  "Fulfill Exchange": "Fulfill Exchange",
+  "New Items": "New Items",
+  "Payment link": "Payment link",
+  "Return Items": "Return Items",
+  "Cancel exchange": "Cancel exchange",
+  "Are you sure you want to cancel this exchange?": "Are you sure you want to cancel this exchange?",
+  "Exchange cancelled": "Exchange cancelled",
+  "Cancel return": "Cancel return",
+  "Are you sure you want to cancel this return?": "Are you sure you want to cancel this return?",
+  "Return cancelled": "Return cancelled",
+  "Delete note": "Delete note",
+  "Deleted note": "Deleted note",
+  "Order Canceled": "Order Canceled",
+  "Order Placed": "Order Placed",
+  "Canceled return": "Canceled return",
+  "Sign out": "Sign out",
+  "Search anything...": "Search anything...",
+  "Inventory item": "Inventory item",
+  "Creation date": "Creation date",
+  "Created by": "Created by",
+  "Jump to...": "Jump to...",
+  "esc": "esc",
+  "Discard": "Discard",
+  "{soothedOffset} - {pageSize} of {count} {title}": "{soothedOffset} - {pageSize} of {count} {title}",
+  "Extensions": "Extensions",
+  "Manage the currencies of your store": "Manage the currencies of your store",
+  "Manage shipping, payment, and fulfillment across regions": "Manage shipping, payment, and fulfillment across regions",
+  "Control which product are available in which channels": "Control which product are available in which channels",
+  "Usage insights": "Usage insights",
+  "First name": "First name",
+  "Last name": "Last name",
+  "Choose default currency": "Choose default currency",
+  "View": "View",
+  
 }
