updated version number

--- a/www/apps/docs/content/upgrade-guides/medusa-core/1-18.md
+++ b/www/apps/docs/content/upgrade-guides/medusa-core/1-18.md
@@ -1,12 +1,12 @@
 ---
-description: "Actions Required for v.1.17.5"
+description: "Actions Required for v.1.18"
 sidebar_custom_props:
   iconName: "server-stack-solid"
 ---
 
-# v1.17.5
+# v1.18
 
-Version 1.17.5 of Medusa ships improved [Subscriber](../../development/events/create-subscriber.md) and [Scheduled Job](../../development/scheduled-jobs/create.md) APIs, renamed feature flags, and general big fixes.
+Version 1.18 of Medusa ships improved [Subscriber](../../development/events/create-subscriber.md) and [Scheduled Job](../../development/scheduled-jobs/create.md) APIs, renamed feature flags, and general big fixes.
 
 ## Breaking Changes
 
@@ -32,7 +32,7 @@ In previous versions, Notification Provider Services subscribed to events in a S
 Run the following command in your project:
 
 ```bash npm2yarn
-npm install @medusajs/medusa@1.17.5
+npm install @medusajs/medusa@1.18
 ```
 
-To avoid unexpected issues with dependencies, it is also recommended to update all other Medusa plugins or packages you have installed.
+To avoid unexpected issues with dependencies, it's also recommended to update all other Medusa plugins or packages you have installed.
