docs: added migration action to upgrade guide

--- a/www/apps/docs/content/upgrade-guides/medusa-core/1-18.md
+++ b/www/apps/docs/content/upgrade-guides/medusa-core/1-18.md
@@ -36,3 +36,15 @@ npm install @medusajs/medusa@1.18
 ```
 
 To avoid unexpected issues with dependencies, it's also recommended to update all other Medusa plugins or packages you have installed.
+
+---
+
+## Actions Required
+
+### Run Migrations
+
+After updating your Medusa server and before running it, run the following command to run the latest migrations:
+
+```bash
+npx medusa migrations run
+```
