--- a/www/apps/docs/content/modules/products/storefront/use-categories.mdx
+++ b/www/apps/docs/content/modules/products/storefront/use-categories.mdx
@@ -48,7 +48,7 @@ If you follow the Medusa React code blocks, it's assumed you already have [Medus
 
 This guide also includes code snippets to utilize the `@medusajs/product` module in your storefront, among other methods.
 
-If you follow the `@medusajs/product` code blocks, it's assumed you already have the [@medusajs/product](../serverless-module.mdx) installed.
+If you follow the `@medusajs/product` code blocks, it's assumed you already have the [@medusajs/product](../../../experimental/product/install-nodejs.md) installed.
 
 ---
 
