--- a/www/apps/docs/content/starters/nextjs-medusa-starter.mdx
+++ b/www/apps/docs/content/starters/nextjs-medusa-starter.mdx
@@ -157,7 +157,7 @@ NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://localhost:9001
 
 :::note
 
-The Product Module is currently in beta. You can learn more about it [here](../modules/products/serverless-module.mdx). In addition, the product module in the Next.js storefront can't be used without the Medusa backend at the moment.
+The Product Module is currently in beta. You can learn more about it [here](../experimental/product/install-nodejs.md). In addition, the product module in the Next.js storefront can't be used without the Medusa backend at the moment.
 
 :::
 
