--- a/www/apps/docs/content/experimental/pricing/prices-calculation.mdx
+++ b/www/apps/docs/content/experimental/pricing/prices-calculation.mdx
@@ -23,15 +23,18 @@ For example:
 import { 
   initialize as initializePricingModule,
 } from "@medusajs/pricing"
-async function calculatePrice (priceSetId: string, currencyCode: string) {
+async function calculatePrice(
+  priceSetId: string, 
+  currencyCode: string
+) {
   const pricingService = await initializePricingModule()
 
   const price = await pricingService.calculatePrices(
     { id: [priceSetId] },
     {
       context: {
-        currency_code: currencyCode
-      }
+        currency_code: currencyCode,
+      },
     }
   )
 }
@@ -45,7 +48,10 @@ For example:
 import { 
   initialize as initializePricingModule,
 } from "@medusajs/pricing"
-async function calculatePrice (priceSetId: string, currencyCode: string) {
+async function calculatePrice(
+  priceSetId: string, 
+  currencyCode: string
+) {
   const pricingService = await initializePricingModule()
 
   const price = await pricingService.calculatePrices(
@@ -53,8 +59,8 @@ async function calculatePrice (priceSetId: string, currencyCode: string) {
     {
       context: {
         currency_code: currencyCode,
-        region_id: "US"
-      }
+        region_id: "US",
+      },
     }
   )
 }
@@ -99,28 +105,38 @@ After the original and calculated prices are selected, the method will use them 
 ```ts
 const price = {
   id: priceSetId,
-  is_calculated_price_price_list: !!calculatedPrice?.price_list_id,
-  calculated_amount: parseInt(calculatedPrice?.amount || "") || null,
+  is_calculated_price_price_list: 
+    !!calculatedPrice?.price_list_id,
+  calculated_amount: parseInt(calculatedPrice?.amount || "") ||
+    null,
 
   is_original_price_price_list: !!originalPrice?.price_list_id,
-  original_amount: parseInt(originalPrice?.amount || "") || null,
+  original_amount: parseInt(originalPrice?.amount || "") ||
+    null,
 
-  currency_code: calculatedPrice?.currency_code || null,
+  currency_code: calculatedPrice?.currency_code ||
+    null,
 
   calculated_price: {
     money_amount_id: calculatedPrice?.id || null,
     price_list_id: calculatedPrice?.price_list_id || null,
     price_list_type: calculatedPrice?.price_list_type || null,
-    min_quantity: parseInt(calculatedPrice?.min_quantity || "") || null,
-    max_quantity: parseInt(calculatedPrice?.max_quantity || "") || null,
+    min_quantity: parseInt(
+      calculatedPrice?.min_quantity || ""
+    ) || null,
+    max_quantity: parseInt(
+      calculatedPrice?.max_quantity || ""
+    ) || null,
   },
 
   original_price: {
     money_amount_id: originalPrice?.id || null,
     price_list_id: originalPrice?.price_list_id || null,
     price_list_type: originalPrice?.price_list_type || null,
-    min_quantity: parseInt(originalPrice?.min_quantity || "") || null,
-    max_quantity: parseInt(originalPrice?.max_quantity || "") || null,
+    min_quantity: parseInt(originalPrice?.min_quantity || "") ||
+      null,
+    max_quantity: parseInt(originalPrice?.max_quantity || "") ||
+      null,
   },
 }
 ```
@@ -157,7 +173,10 @@ const ruleTypes = await pricingService.createRuleTypes([
 ])
 
 const priceSet = await service.create({
-  rules: [{ rule_attribute: "region_id" }, { rule_attribute: "city" }, ],
+  rules: [
+    { rule_attribute: "region_id" },
+    { rule_attribute: "city" },
+  ],
   prices: [
     //default
     {
@@ -170,14 +189,14 @@ const priceSet = await service.create({
       amount: 400,
       currency_code: "EUR",
       rules: {
-        region_id: "PL"
+        region_id: "PL",
       },
     },
     {
       amount: 450,
       currency_code: "EUR",
       rules: {
-        city: "krakow"
+        city: "krakow",
       },
     },
     {
@@ -185,7 +204,7 @@ const priceSet = await service.create({
       currency_code: "EUR",
       rules: {
         city: "warsaw",
-        region_id: "PL"
+        region_id: "PL",
       },
     },
   ],
