docs: redesigned admonitions

--- a/www/apps/docs/content/development/backend/prepare-environment.mdx
+++ b/www/apps/docs/content/development/backend/prepare-environment.mdx
@@ -14,7 +14,7 @@ This document includes the installation instructions for the tools required to u
 
 Node.js is the environment that makes it possible for Medusa to run, so you must install Node.js on your machine to start Medusa development.
 
-:::caution
+:::warning
 
 Medusa supports v16+ of Node.js. You can check your Node.js version using the following command:
 
