--- a/www/apps/docs/content/modules/price-lists/admin/_import-prices.mdx
+++ b/www/apps/docs/content/modules/price-lists/admin/_import-prices.mdx
@@ -15,7 +15,7 @@ In this document, you’ll learn how to bulk import prices into a price list usi
 
 Using Medusa’s [Batch Job Admin APIs](https://docs.medusajs.com/api/admin#batch-jobs), you can import prices into a price list.
 
-:::caution
+:::warning
 
 Importing prices into a price list removes all existing prices in the price list and adds the imported prices.
 
