--- a/www/apps/docs/content/user-guide/products/manage.mdx
+++ b/www/apps/docs/content/user-guide/products/manage.mdx
@@ -300,7 +300,7 @@ To manage the thumbnail of a product:
 
 ### Delete Thumbnail
 
-:::caution
+:::warning
 
 Deleting a thumbnail can’t be undone.
 
