--- a/www/apps/docs/content/plugins/file-service/s3.mdx
+++ b/www/apps/docs/content/plugins/file-service/s3.mdx
@@ -152,7 +152,7 @@ S3_PREFIX=<YOUR_BUCKET_PREFIX>
 ```
 
 
-:::caution
+:::warning
 
 If you have multiple storage plugins configured, the last plugin declared in the `medusa-config.js` file will be used.
 
